update: fix floating Btn z-index

--- a/src/_components/_lib/button.scss
+++ b/src/_components/_lib/button.scss
@@ -50,4 +50,5 @@
 
   position: absolute;
   bottom: 16px;
+  z-index: 1;
 }
